# data_science_pro_course

./: .gitignore  README.md  pyproject.toml
module_1/: README.md
module_1/01/: 01.txt  Шаблон для кейсов.xlsx
module_1/02/: 2.8_2.txt
module_1/03/: countries_3.10.xlsx  countries_3.3.txt  countries_3.4.xlsx  countries_3.6.xlsx  countries_and_regions_3.8.xlsx  countries_missing_3.5.xlsx  partner_data.xlsx  partner_data_bonus.xlsx  titanic_smpl_3.11.xlsx
module_1/04/: 4.ipynb  Практическое_задание_4.8.ipynb
module_1/05/: 5.ipynb  Несколько строк кода в ячейке.ipynb
module_1/06/: 6.ipynb
module_1/07/: 7.ipynb
module_1/08/: 8.2_Практика. Списки. Часть 1.ipynb  8.6_Практическая работа.ipynb  Практика. Линейный и бинарный поиск.ipynb  Практика. Списки. Часть 2.ipynb
module_1/09/: 9.2_Практика. Работа с функциями.ipynb  9.3_Практика. Декомпозиция. Встроенные функции.ipynb  9.6_Практика. Нормализация строк.ipynb  9.8_Практическая работа.ipynb
module_1/10/: 10.2_Кортежи. Практика.ipynb  10.3_Множества. Практика.ipynb  10.4_Словари. Практика.ipynb  10.7_Практическая работа.ipynb
module_1/11/: 11.1.ipynb  11.1_anna_words.ipynb  11.6_Практическая работа.ipynb  word_length_freq.xlsx
module_1/12/: 12.1_Pandas. Практика.ipynb  12.2_Чтение файлов в Pandas. Практика.ipynb  12.3_JSON-файлы. Практика.ipynb  12.3_df6.json  12.6_Домашнее задание.ipynb
module_1/13/: 13.5_Requests. Практика.ipynb  13.9_Практическая работа.ipynb
module_1/15/: 15.3.txt  15.4.txt  15.5.txt  15.6.txt
module_1/16/: bi_homework.pbix  classicsales.pbix  (+1 more)
module_2/: README.md
(+12 files in other folders)
