[project]
name = "data-science-pro-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cowsay>=6.1",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.6",
    "missingno>=0.5.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "requests>=2.32.4",
    "wikipedia>=1.4.0",
]

[dependency-groups]
dev = [
    "mypy>=1.16.0",
    "ruff>=0.11.12",
]
